Update config to allow JSX inside .js files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,15 @@
         "prettier/react"
     ],
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".js",
+                    ".jsx"
+                ]
+            }
+        ]
     }
 }
