--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "random_quote_machine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://srikanthkanjarla.github.io/Random-Quote-Machine/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
@@ -21,6 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eslint-check": "eslint --print-config . | eslint-config-prettier-check"
   },
   "eslintConfig": {
@@ -40,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "gh-pages": "^2.0.1",
     "prettier": "^1.14.3"
   }
 }
